# tinykvm

./: .gitignore  CMakeLists.txt  README.md  TODO.md  amd.txt  intel.txt  results.txt  storage.sh
.github/workflows/: cmake.yml  unittests.yml
docs/: arm64-feature-matrix.md  benchmarks.md
fuzz/: CMakeLists.txt  fuzz.cpp  fuzzer.sh
guest/: .gdbinit  api.hpp  assembly.sh  build.sh  disassembly.sh  guest.cpp  interrupts.asm  start.cpp  vm64.asm
guest/STREAM/: build.sh  hugepage_stream.c  results.txt  stream.c
guest/glibc/: .gdbinit  float.c  float.gdb  glibc.c  glibc.cpp  s.gdb
guest/go/: s.gdb
guest/mini/: build.sh  mini.asm  s.gdb
guest/musl/: .gdbinit  build.sh  glibc.gdb  musl.c  musl.cpp  s.gdb  simple.c  syscall_bench.c
guest/nim_storage/: .gitignore  build.sh  main.c  main.nim  storage.nim
guest/pipe/: pipe.c
guest/rust_storage/: .gitignore  Cargo.toml  build.sh  main  symbol_offset.c
guest/rust_storage/src/: main.rs
guest/rust_storage/storage_program/: build.sh
guest/rust_storage/storage_program/src/: main.rs
guest/src/: api.hpp  crc32c.cpp  guest.cpp  start.cpp
guest/storage/: .gitignore  CMakeLists.txt  build.sh  cpp_main  cpp_storage  json.hpp  main.c  main.cpp  storage.c  storage.cpp  symbol_offset.c
guest/tests/: build.sh  cxx_test.cpp  debug.sh  remote.gdb  test.c
lib/: CMakeLists.txt
lib/tinykvm/: common.hpp  forward.hpp  machine.cpp  machine.hpp  machine_debug.cpp  machine_elf.cpp  machine_env.cpp  machine_inline.hpp  machine_state.cpp  machine_utils.cpp  memory.cpp  memory.hpp  memory_bank.cpp  memory_bank.hpp  memory_maps.cpp  mmap_cache.hpp  page_streaming.cpp  page_streaming.hpp  paging.hpp  remote.cpp  rsp_client.cpp  rsp_client.hpp  signals.cpp  signals.hpp  smp.cpp  smp.hpp  threads.cpp  threads.hpp  vcpu.cpp  vcpu.hpp  vcpu_run.cpp  virtual_mem.hpp  void_async.hpp
lib/tinykvm/amd64/: amd64.hpp  gdt.cpp  gdt.hpp  idt.cpp  idt.hpp  lapic.hpp  memory_layout.hpp  paging.cpp  paging.hpp  tss.cpp  tss.hpp  usercode.cpp  usercode.hpp
lib/tinykvm/amd64/builtin/: .gitignore  disassembly.sh  interrupts.asm  kernel_assembly.h  usercode.asm  vsyscall.asm
lib/tinykvm/arm64/: memory_layout.hpp  paging.cpp  paging.hpp  stubs.cpp  vcpu.cpp  vcpu_run.cpp
lib/tinykvm/kernel/: amd64.hpp  gdt.cpp  gdt.hpp  idt.cpp  idt.hpp  lapic.hpp  memory_layout.hpp  paging.cpp  paging.hpp  tss.cpp  tss.hpp  usercode.cpp  usercode.hpp  vdso.cpp  vdso.hpp
lib/tinykvm/kernel/builtin/: .gitignore  assembly.sh  disassembly.sh  interrupts.asm  kernel_assembly.h  usercode.asm  usercode_assembly.sh  vsyscall.asm  vsyscall_assembly.sh
lib/tinykvm/linux/: fds.cpp  fds.hpp  signals.cpp  signals.hpp  system_calls.cpp  threads.cpp  threads.hpp
lib/tinykvm/util/: cpptime.h  elf.hpp  function.hpp  scoped_profiler.hpp  threadpool.h  threadtask.hpp
results/: amd.txt  coremark.txt
src/: amd64.hpp  arm64_bench.cpp  arm64_demo.cpp  assert.hpp  bench.cpp  common.hpp  forward.hpp  functions.cpp  load_file.hpp  machine.cpp  machine.hpp  machine_elf.cpp  machine_inline.hpp  main.cpp  memory.cpp  memory.hpp  pipe.cpp  simple.cpp  snapshot_bench.cpp  storage.cpp  syscall_bench.cpp  tests.cpp  timing.hpp  vcpu.cpp
src/kernel/: gdt.cpp  gdt.hpp  idt.cpp  idt.hpp
tests/: CMakeLists.txt  run_unit_tests.sh
tests/phase3/: compare_phase3_results.sh  run_phase3_measurements.sh
tests/unit/: CMakeLists.txt  arm64_elf.cpp  arm64_fork.cpp  arm64_minimal.cpp  arm64_signals.cpp  arm64_threads.cpp  basic.cpp  codebuilder.cpp  elf.cpp  fork.cpp  minimal.c  minimal.h  mmap.cpp  remote.cpp  reset.cpp  tegridy.cpp  timeout.cpp
tests/unit/elf/: rust.elf
